# snaic-ai-causeway

./: .gitignore  README.md  annotator_app.py  camera_config.json  causeway_app.py  dagster_defs.py  dataset_lane.yaml  dataset_vehicle.yaml  dataset_vehicle_curated.yaml  evaluate_labeler.py  picker.py  pipeline.py  pyproject.toml  traffic_image_scrapper.py  train.py  workspace.yaml
.superpowers/sdd/: progress.md
causeway/: annotation_helpers.py  config.py  dataset.py  db.py  labeler.py  migration.py  scraper.py
docs/: handoff-2026-07-01.md
docs/specs/: 2026-06-29-yolo-training-readiness-design.md
docs/superpowers/plans/: 2026-06-27-causeway-dagster-pipeline.md  2026-06-27-manual-annotation-tab.md  2026-06-30-annotator-app.md
docs/superpowers/specs/: 2026-06-27-annotate-canvas-overlay-design.md  2026-06-27-causeway-dagster-pipeline-design.md  2026-06-27-manual-annotation-tab-design.md  2026-06-30-annotator-app-design.md
plan/: prd.md
tests/: test_annotation_helpers.py  test_app_helpers.py  test_dataset.py  test_db.py  test_evaluate_labeler.py  test_labeler.py  test_migration.py  test_scraper.py
