[project]
name = "snaic-ai-causeway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dagster>=1.13.11",
    "dagster-webserver>=1.13.11",
    "opencv-python>=4.13.0.92",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "ultralytics>=8.4.80",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
